--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <div class="textWelcome">
       <p>
         Surely you've heard of the Pokémon, but do you know what they are? Pokémon are creatures of all colors, sizes and types.
-          
+
         We invite you to meet many of them.
         Let's go for the adventure!</p>
     </div>
@@ -26,9 +26,9 @@
     </div>
   </div>
   <header>
-    <div class="fundLogoPokemon"><div class="logoPokemon"></div></div>
+    <div class="fundLogoPokemon .flex-center"><div class="logoPokemon"></div></div>
     <div id="navbar" class="containerMenu">
-      <nav class="menuResponsive"> 
+      <nav class="menuResponsive">
         <div class="containerUlMenu">
           <div id="toogleMenu">&#9776;</div>
           <ul id="menuOption" class="ulMenu">
